--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "animejs": "^3.2.1",
     "gatsby": "^3.10.1",
     "gatsby-plugin-google-analytics": "^3.10.0",
     "gatsby-plugin-mdx": "^2.10.0",
@@ -29,6 +30,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.36.0"
+    "react-router": "^5.2.0",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.36.0",
+    "smooth-scroll": "^16.1.3",
+    "styled-components": "^5.3.0"
   }
 }
