--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "animejs": "^3.2.1",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.10.1",
     "gatsby-plugin-google-analytics": "^3.10.0",
+    "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-mdx": "^2.10.0",
     "gatsby-plugin-netlify-cms": "^5.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sass": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "netlify-cms-app": "^2.15.30",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -33,7 +37,14 @@
     "react-router": "^5.2.0",
     "react-transition-group": "^4.4.2",
     "sass": "^1.36.0",
+    "scrollreveal": "^4.0.9",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/eslint-parser": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-preset-gatsby": "^1.10.0"
   }
 }
