--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "website-v1",
+  "name": "website",
   "version": "1.0.0",
   "private": true,
-  "description": "website-v1",
+  "description": "website",
   "author": "j-labbe",
+  "license": "MIT",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -19,32 +20,37 @@
     "@mdx-js/react": "^1.6.22",
     "animejs": "^3.2.1",
     "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.10.1",
-    "gatsby-plugin-google-analytics": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-mdx": "^2.10.0",
-    "gatsby-plugin-netlify-cms": "^5.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sass": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby": "^4.13.1",
+    "gatsby-plugin-google-analytics": "^4.13.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-mdx": "^3.13.0",
+    "gatsby-plugin-netlify-cms": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-sass": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sitemap": "^5.13.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
+    "hamburger-react": "^2.5.0",
     "netlify-cms-app": "^2.15.30",
+    "path-browserify": "^1.0.1",
+    "prism-react-renderer": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.43.1",
     "sass": "^1.36.0",
     "scrollreveal": "^4.0.9",
-    "smooth-scroll": "^16.1.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "tsparticles": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "babel-preset-gatsby": "^1.10.0"
+    "babel-preset-gatsby": "^2.13.0"
   }
 }
