--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-transition-group": "^4.4.2",
-    "react-tsparticles": "^1.43.1",
+    "react-tsparticles": "^2.0.6",
     "sass": "^1.36.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.0",
-    "tsparticles": "^2.0.4"
+    "tsparticles": "^2.0.4",
+    "tsparticles-engine": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
