--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gatsby-plugin-sass": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.13.0",
+    "gatsby-remark-image-attributes": "^1.1.0",
+    "gatsby-remark-images": "^6.13.0",
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "hamburger-react": "^2.5.0",
