--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
+    "react-tooltip": "^5.8.4-beta.2",
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^2.0.6",
     "sass": "^1.36.0",
